# sal-code

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mystyle.mpl  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
scripts/: plots_for_proof.ipynb  ppd.ipynb  psp_shapes.ipynb  stdd.ipynb
scripts/dales_law/: EI-system.ipynb
scripts/microcircuits/: example.yaml  plot_fig.ipynb  run.py
scripts/microcircuits/bp/: backprop.yaml  change_params.py  launcher.sh
scripts/microcircuits/fa/: change_params.py  fa.yaml  launcher.sh
scripts/microcircuits/sal/: change_params.py  launcher.sh  sal.yaml
scripts/sal_principle/: ppd.ipynb  stdd.ipynb
scripts/ssn/: minimal_working_example.yaml  plot_fig.ipynb  train_bm.py
scripts/ssn/plast_noise/: change_params.py  exp.yaml
scripts/ssn/plast_noise_kp/: change_params.py  exp.yaml
scripts/ssn/plast_noise_sal/: .gitignore  change_params.py  exp.yaml  run.sh
scripts/ssn/syn_noise/: change_params.py  exp.yaml  launcher.sh
scripts/ssn/syn_noise_kp/: change_params.py  exp.yaml
scripts/ssn/syn_noise_sal/: change_params.py  exp.yaml
scripts/symm_net/: exp_settings.yaml  load_utils.py  main_salnet.py  salnet_symm.py  scatter_stdwi_rdd_sal.ipynb
spiking_microcircuits/: pyproject.toml
spiking_microcircuits/src/microcircuits/: experiment.py  model.py  utils.py
spiking_sampling_network/: LICENSE  pyproject.toml
spiking_sampling_network/src/neuralsampling/: eisystem.py  network.py  stdp_functions.py  utils.py
stdd_calculator/: pyproject.toml
stdd_calculator/src/stddc/: __init__.py  distr.py  distr2.py  funcs.py  matrix.py  ppd.py
symmnet/: README.md  pyproject.toml
symmnet/src/symmnet/: __init__.py  conv_net.py  datasets.py  layers.py  rdd_layers.py  rdd_net.py  sal_net.py  stdwi_original.py  utils.py
tests/: conftest.py  test_imports.py  test_main_salnet.py  test_microcircuits.py  test_salnet_symm.py  test_ssn.py
tests/fixtures/: microcircuits_smoke.yaml  ssn_smoke.yaml  symmnet_smoke.yaml
