# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stddc"
version = "0.1"
description = "Calculate spike timing difference distributions as presented in https://arxiv.org/abs/2503.02642"
readme = "README.md"
authors = [{ name = "Timo Gierlich", email = "timo.gierlich@unibe.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy >= 1.24",
    "matplotlib >= 3.7",
    "scipy >= 1.12",
]
requires-python = ">=3.9"

[tool.isort]
profile = "black"

[mypy]
plugins = "numpy.typing.mypy_plugin"

[project.urls]
Homepage = "https://github.com/unibe-cns/sal-code"
Issues = "https://github.com/unibe-cns/sal-code/issues"
